# hyperliquid_bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
copybot/: __init__.py  controller.py  discord_bot.py  main.py
copybot/config/: __init__.py  loader.py  settings.yaml
copybot/engine/: decision.py  execution.py  fill_copier.py  paper_trader.py  reconciliation.py  risk.py
copybot/ingestion/: rest_poller.py  ws_listener.py
copybot/state/: metadata.py  models.py  store.py
copybot/utils/: alerting.py  logging.py  math.py
scripts/: analyze_following.py  analyze_paper_trades.py  setup_ec2.sh
tests/unit/: test_decision.py  test_risk.py  test_scaling.py
